# ForgeLang

./: .env  .gitignore  Cargo.toml  Makefile  README.md  forgelang.fl  nvim-config.lua  setup-nvim.sh  showcase_v2.fl  test_tuples.fl
docs/: README.md  docusaurus.config.ts  index.html  package.json  sidebars.ts  tsconfig.json
docs/docs/: examples.md  index.md  installation.md  intro.md  quick-start.md  why-forgelang.md
docs/docs/advanced/: enums.md  generics.md
docs/docs/api/: io.md  overview.md
docs/docs/language-guide/: control-flow.md  functions.md  modules.md  operators.md  overview.md  syntax.md  types.md  variables.md
docs/docs/stdlib/: bool.md  env.md  float.md  fs.md  int.md  io.md  list.md  math.md  overview.md  proc.md  str.md  time.md
docs/src/css/: custom.css
nvim-plugin/: forgelang.lua
src/: analyzer.rs  ast.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  runtime.rs
src/cli/: utils.rs
src/engine/: analyzer.rs  ast.rs  error.rs  interpreter.rs  lexer.rs  mod.rs  parser.rs  runtime.rs
stdlib/bool/: package.fl
stdlib/env/: package.fl
stdlib/float/: package.fl
stdlib/fs/: package.fl
stdlib/int/: package.fl
stdlib/io/: package.fl
stdlib/list/: package.fl
stdlib/math/: package.fl
stdlib/proc/: package.fl
stdlib/str/: package.fl
stdlib/time/: package.fl
tree-sitter-forgelang/: README.md  grammar.js  package-lock.json  package.json
tree-sitter-forgelang/queries/: highlights.scm
tree-sitter-forgelang/src/: grammar.json  node-types.json  parser.c
